# openaiimage-api

./: Dockerfile  Jenkinsfile  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  proxychains.conf  pyproject.toml  rq.Dockerfile
backend/: Dockerfile  docker-entrypoint.sh  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 00d779c74806_add_users.py  219c58d5a528_add_positions_and_task_model_id.py  39ac6cd83e6b_add_model_enabled.py  8d0fc9169504_add_user_inputs.py  a6800518a3f8_refactor.py  d5347431df83_init.py  d8499551eadc_make_inputs_models_many2many.py  f732c1e10a56_add_task_items_used_tokens.py
backend/src/: main.py
backend/src/core/: admin.py  auth.py  config.py  filesystem_storage.py  logging_setup.py  rq.py
backend/src/db/: base.py  dependencies.py  engine.py
backend/src/redis/: base.py  dependencies.py
backend/tests/: conftest.py  utils.py
backend/tests/fakes/: context.py  db.py  task.py  task_source.py
backend/tests/functional/: functional_test_model.py  functional_test_task.py  functional_test_task_v2.py  functional_test_user.py
backend/tests/integration/: conftest.py  integration_test_auth.py  integration_test_context.py  integration_test_task.py
etc/prometheus/: prometheus.yml
etc/rq/: Dockerfile
src/app/: main.py
src/app/db/: tables.py
src/app/repositories/: context.py  context_entity.py  external.py  openai.py  prompt.py  prompt_category.py  storage.py  task.py  task_request.py
src/app/routes/: context.py  model.py  model_category.py  task.py
src/app/schemas/: context.py  external.py  model.py  (+2 more)
(+96 files in other folders)
