[project]
name = "app"
version = "0.0.1"

dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "fastapi-admin>=1.0.4",
    "fastapi-storages>=0.3.0",
    "pydantic>=2.11.4",
    "redis>=6.1.0",
    "rq>=2.3.3",
    "sqlalchemy>=2.0.41",
]
requires-python = ">=3.13"
authors = [
    {name = "Roman", email="play62342@gmail.com"}
]
readme = "README.md"

[build-system]
requires = ["uv_build>=0.7.4,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = "backend"
